Fix HTML structure and update portfolio images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="porto-name">
                     <h1>Khaled Nasr</h1>
                 </div>
-                <img src="./images/portofolio-image.png" alt="porto-image">
+                <img src="./portofolio-image.png" alt="porto-image">
             </div>
             <div class="nav-links">
                 <nav>
@@ -71,7 +71,7 @@
                             <div class="cards">
                                 <div class="card design">
                                     <div class="card-pic">
-                                        <img src="./images/19362653.jpg" alt="portfolio picture">
+                                        <img src="./19362653.jpg" alt="portfolio picture">
                                     </div>
                                     <div class="bio">
                                         <h2>Jone Doe</h2>
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="card design">
                                     <div class="card-pic">
-                                        <img src="./images/455938-PFNJWT-520.jpg" alt="portfolio picture">
+                                        <img src="./455938-PFNJWT-520.jpg" alt="portfolio picture">
                                     </div>
                                     <div class="bio">
                                         <h2>Jone Doe</h2>
@@ -98,7 +98,7 @@
                                 </div>
                                 <div class="card photos">
                                     <div class="card-pic">
-                                        <img src="./images/5283.jpg" alt="portfolio picture">
+                                        <img src="./5283.jpg" alt="portfolio picture">
                                     </div>
                                     <div class="bio">
                                         <h2>Jone Doe</h2>
@@ -112,7 +112,7 @@
                                 </div>
                                 <div class="card design">
                                     <div class="card-pic">
-                                        <img src="./images/455938-PFNJWT-520.jpg" alt="portfolio picture">
+                                        <img src="./455938-PFNJWT-520.jpg" alt="portfolio picture">
                                     </div>
                                     <div class="bio">
                                         <h2>Jone Doe</h2>
@@ -126,7 +126,7 @@
                                 </div>
                                 <div class="card photos">
                                     <div class="card-pic">
-                                        <img src="./images/5283.jpg" alt="portfolio picture">
+                                        <img src="./5283.jpg" alt="portfolio picture">
                                     </div>
                                     <div class="bio">
                                         <h2>Jone Doe</h2>
@@ -140,7 +140,7 @@
                                 </div>
                                 <div class="card design">
                                     <div class="card-pic">
-                                        <img src="./images/19362653.jpg" alt="portfolio picture">
+                                        <img src="./19362653.jpg" alt="portfolio picture">
                                     </div>
                                     <div class="bio">
                                         <h2>Jone Doe</h2>
