--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <h2>Contact Me</h2>
                         </div>
                         <div class="input-form">
-                            <form action="./send_email.php" method="post">
+                            <form name="contact" method="POST" data-netlify="true">
                                 <div class="name-email">
                                     <div class="name">
                                         <input type="text" id="username" name="name" required placeholder=" Name"
@@ -377,3 +377,4 @@
 </body>
 
 </html>
+
