Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
                         </div>
                         <div class="input-form">
                             <form name="contact" method="POST" data-netlify="true">
+                                 <input type="hidden" name="form-name" value="contact">
                                 <div class="name-email">
                                     <div class="name">
                                         <input type="text" id="username" name="name" required placeholder=" Name"
@@ -377,4 +378,5 @@
 </body>
 
 </html>
+
 
