Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -374,9 +374,12 @@
             <a class="fixed" href="https://wa.me/01068009933" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </main>
     </div>
+    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="./script.js"></script>
 </body>
 
 </html>
+
 
 
