--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         </div>
                         <div class="input-form">
                             <form name="contact" method="POST" data-netlify="true">
-                                 <input type="hidden" name="form-name" value="contact">
+                                 <input type="hidden" name="title" value="New contact">
                                 <div class="name-email">
                                     <div class="name">
                                         <input type="text" id="username" name="name" required placeholder=" Name"
@@ -380,6 +380,7 @@
 </body>
 
 </html>
+
 
 
 
