--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <h2>Contact Me</h2>
                         </div>
                         <div class="input-form">
-                            <form name="contact" method="POST" data-netlify="true">
+                            <form name="contact" method="POST" data-netlify="true" id="contact-form">
                                  <input type="hidden" name="title" value="New contact">
                                 <div class="name-email">
                                     <div class="name">
@@ -380,6 +380,7 @@
 </body>
 
 </html>
+
 
 
 
