--- a/index.html
+++ b/index.html
@@ -352,11 +352,16 @@
                         </div>
                         <footer>
                             <div class="text-about">
-                                <h3>About</h3>
+                                <!-- <h3>About</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime porro quaudantium
-                                    veritatis optio volup</p>
+                                    veritatis optio volup</p> -->
+                                <p><strong>From Vision to Sales:</strong> Your <strong>goals</strong>, our
+                                    <strong>tech</strong>. We listen deeply to your business needs
+                                    to deploy bespoke digital solutions that work for you, and <strong>bring your vision
+                                        to
+                                        life</strong>.</p>
                             </div>
-                            <div class="blog">
+                            <!-- <div class="blog">
                                 <h3>Blogs</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime porro quaudantium
                                     veritatis optio volup</p>
@@ -365,7 +370,7 @@
                                 <h3>Tags</h3>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime porro quaudantium
                                     veritatis optio volup</p>
-                            </div>
+                            </div> -->
                         </footer>
                     </div>
                 </section>
@@ -380,6 +385,7 @@
 </body>
 
 </html>
+
 
 
 
