--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                             </div>
                             <div class=" location">
                                     <i class="fa-solid fa-location-dot"></i>
-                                    <p>Egypt,Red Sea,lorem ipsum</p>
+                                    <p>Egypt, Red Sea</p>
                             </div>
                             <div class="telphon">
                                 <i class="fa-solid fa-phone-flip"></i>
@@ -385,6 +385,7 @@
 </body>
 
 </html>
+
 
 
 
