Fix HTML structure and update portfolio section

--- a/index.html
+++ b/index.html
@@ -68,88 +68,109 @@
                                 <label for="photos">photos</label>
                             </div>
 
-                            <div class="cards">
-                                <div class="card design">
-                                    <div class="card-pic">
-                                        <img src="./19362653.jpg" alt="portfolio picture">
-                                    </div>
-                                    <div class="bio">
-                                        <h2>Jone Doe</h2>
-                                        <p>Welcome to my portfolio! I am Jone Doe, a passionate software developer with
-                                            experience in
-                                            full-stack development. My
-                                            expertise includes HTML, CSS,
-                                            JavaScript, and various frameworks.</p>
-                                    </div>
-                                </div>
-                                <div class="card design">
-                                    <div class="card-pic">
-                                        <img src="./455938-PFNJWT-520.jpg" alt="portfolio picture">
-                                    </div>
-                                    <div class="bio">
-                                        <h2>Jone Doe</h2>
-
-                                        <p>Welcome to my portfolio! I am Jone Doe, a passionate software developer with
-                                            experience in
-                                            full-stack development. My
-                                            expertise includes HTML, CSS,
-                                            JavaScript, and various frameworks.</p>
+                        <div class="cards">
+                                <div class="card design flip-card">
+                                    <div class="flip-card-inner">
+                                        <div class="flip-card-front">
+                                            <div class="bio">
+                                                <h2>Jone Doe</h2>
+                                                <p>Welcome to my portfolio! I am Jone Doe, a passionate software
+                                                    developer with
+                                                    experience in
+                                                    full-stack development. My
+                                                    expertise includes HTML, CSS,
+                                                    JavaScript, and various frameworks.</p>
+                                            </div>
+                                        </div>
+                                        <div class="flip-card-back">
+                                            <div class="card-pic">
+                                                <img src="./19362653.jpg" alt="portfolio picture">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="card photos">
-                                    <div class="card-pic">
-                                        <img src="./5283.jpg" alt="portfolio picture">
-                                    </div>
-                                    <div class="bio">
-                                        <h2>Jone Doe</h2>
+                                <div class="card design flip-card">
+                                    <div class="flip-card-inner">
+                                        <div class="flip-card-front">
+                                            <div class="bio">
+                                                <h2>Jone Doe</h2>
 
-                                        <p>Welcome to my portfolio! I am Jone Doe, a passionate software developer with
-                                            experience in
-                                            full-stack development. My
-                                            expertise includes HTML, CSS,
-                                            JavaScript, and various frameworks.</p>
+                                                <p>Welcome to my portfolio! I am Jone Doe, a passionate software
+                                                    developer with
+                                                    experience in
+                                                    full-stack development. My
+                                                    expertise includes HTML, CSS,
+                                                    JavaScript, and various frameworks.</p>
+                                            </div>
+                                        </div>
+                                        <div class="flip-card-back">
+                                            <div class="card-pic">
+                                                <img src="./455938-PFNJWT-520.jpg" alt="portfolio picture">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="card design">
-                                    <div class="card-pic">
-                                        <img src="./455938-PFNJWT-520.jpg" alt="portfolio picture">
-                                    </div>
-                                    <div class="bio">
-                                        <h2>Jone Doe</h2>
+                                <div class="card photos flip-card">
+                                    <div class="flip-card-inner">
+                                        <div class="flip-card-front">
+                                            <div class="bio">
+                                                <h2>Jone Doe</h2>
 
-                                        <p>Welcome to my portfolio! I am Jone Doe, a passionate software developer with
-                                            experience in
-                                            full-stack development. My
-                                            expertise includes HTML, CSS,
-                                            JavaScript, and various frameworks.</p>
+                                                <p>Welcome to my portfolio! I am Jone Doe, a passionate software
+                                                    developer with
+                                                    experience in
+                                                    full-stack development. My
+                                                    expertise includes HTML, CSS,
+                                                    JavaScript, and various frameworks.</p>
+                                            </div>
+                                        </div>
+                                        <div class="flip-card-back">
+                                            <div class="card-pic">
+                                                <img src="./5283.jpg" alt="portfolio picture">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="card photos">
-                                    <div class="card-pic">
-                                        <img src="./5283.jpg" alt="portfolio picture">
-                                    </div>
-                                    <div class="bio">
-                                        <h2>Jone Doe</h2>
+                                <div class="card design flip-card">
+                                    <div class="flip-card-inner">
+                                        <div class="flip-card-front">
+                                            <div class="bio">
+                                                <h2>Jone Doe</h2>
 
-                                        <p>Welcome to my portfolio! I am Jone Doe, a passionate software developer with
-                                            experience in
-                                            full-stack development. My
-                                            expertise includes HTML, CSS,
-                                            JavaScript, and various frameworks.</p>
+                                                <p>Welcome to my portfolio! I am Jone Doe, a passionate software
+                                                    developer with
+                                                    experience in
+                                                    full-stack development. My
+                                                    expertise includes HTML, CSS,
+                                                    JavaScript, and various frameworks.</p>
+                                            </div>
+                                        </div>
+                                        <div class="flip-card-back">
+                                            <div class="card-pic">
+                                                <img src="./455938-PFNJWT-520.jpg" alt="portfolio picture">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="card design">
-                                    <div class="card-pic">
-                                        <img src="./19362653.jpg" alt="portfolio picture">
-                                    </div>
-                                    <div class="bio">
-                                        <h2>Jone Doe</h2>
+                                <div class="card photos flip-card">
+                                    <div class="flip-card-inner">
+                                        <div class="flip-card-front">
+                                            <div class="bio">
+                                                <h2>Jone Doe</h2>
 
-                                        <p>Welcome to my portfolio! I am Jone Doe, a passionate software developer with
-                                            experience in
-                                            full-stack development. My
-                                            expertise includes HTML, CSS,
-                                            JavaScript, and various frameworks.</p>
+                                                <p>Welcome to my portfolio! I am Jone Doe, a passionate software
+                                                    developer with
+                                                    experience in
+                                                    full-stack development. My
+                                                    expertise includes HTML, CSS,
+                                                    JavaScript, and various frameworks.</p>
+                                            </div>
+                                        </div>
+                                        <div class="flip-card-back">
+                                            <div class="card-pic">
+                                                <img src="./19362653.jpg" alt="portfolio picture">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -385,6 +406,7 @@
 </body>
 
 </html>
+
 
 
 
